# worker-scheduler

./: .editorconfig  .gitignore  Instruções.txt  README.md  pylintrc  pyproject.toml  setup.cfg
.github/actions/: cd.yml
.github/actions/cd/: action.yml
.github/workflows/: ci.yml
deploy/: fabfile.py
deploy/docker_containers/: docker-compose.yml
deploy/docker_containers/worker_scheduler/: Dockerfile
src/: Experimenting on the Google Calendar API.ipynb  format.sh  manage.py  run_coverage.sh  run_tests.sh
src/project/: emails.py.dist  settings.py  urls.py  wsgi.py
src/reiki_da_conceicao/: asgi.py  settings.py  urls.py  wsgi.py
src/scheduler/: forms.py  tests.py  urls.py  views.py
src/scheduler/connectors/: google_connector.py
src/scheduler/exceptions/: __init__.py  google_connector.py
src/scheduler/repositories/: calendar_repository.py  event_repository.py  google_agenda_repository.py
src/scheduler/services/: calendar_service.py  emails_service.py  events_service.py  user_service.py
src/scheduler/templates/: base.html  cancel_work_event.html  choose_timeslot.html  reservation_success.html  schedule_an_appointment.html  upload_photo.html  user_identification.html  welcome.html
src/scheduler/user_timezone_capture/: session_settings.py
src/scheduler/views/: __init__.py  cancel_work_event.py  choose_timeslot.py  reservation_success.py  user_registration.py  welcome_page.py
src/workforce/: admin.py  apps.py  backends.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
src/workforce/migrations/: 0001_initial.py  0002_calendar_name.py  0002_worker_auth_user.py  0002_workevent_cancelling_token.py  0003_auto_20200322_0044.py  0003_auto_20210911_1416.py  0003_remove_worker_name.py  0004_auto_20200322_0050.py  0004_auto_20210911_1625.py  0004_remove_calendar_name.py  0005_auto_20200331_0140.py  0005_auto_20210919_1708.py  0005_availability.py  0006_alter_workevent_canceled_at.py  0006_auto_20200331_0141.py  0006_worker_on_vacations.py  0007_auto_20200323_0221.py  0007_auto_20200331_0251.py  0007_auto_20210919_1712.py  0008_auto_20200323_0338.py  0008_auto_20210924_2231.py  0009_auto_20200323_0343.py  0009_rename_user_patient.py  0010_auto_20200327_0107.py  0011_alter_myuser_id.py  (+12 more)
(+62 files in other folders)
