[tool.poetry]
name = "reiki-da-conceicao"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.21.0"
django = "^3.0.4"
gcsa = "^0.1.4"
mypy = "^0.770"
mypy-extensions = "^0.4.3"

[tool.poetry.dev-dependencies]
rope = "^0.16.0"
pylint = "^2.4.4"
mypy_extensions = "^0.4.3"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
