[tool.poetry]
name = "reiki-da-conceicao"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.21.0"
django = "^3.0.4"
mypy = "^0.770"
mypy-extensions = "^0.4.3"
google-api-python-client = "^1.8.0"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
arrow = "^0.15.5"
Pillow = "^7.0.0"
django-crispy-forms = "^1.9.0"
django-background-tasks = "^1.2.5"

[tool.poetry.dev-dependencies]
rope = "^0.16.0"
pylint = "^2.4.4"
mypy_extensions = "^0.4.3"
mypy = "^0.770"
jupyter = "^1.0.0"
coverage = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
