[tool.poetry]
name = "worker-scheduler"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.21.0"
Django = "^3.2.7"
mypy = "^0.770"
mypy-extensions = "^0.4.3"
google-api-python-client = "^1.8.0"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
arrow = "^0.15.5"
Pillow = "^8.2.0"
django-crispy-forms = "^1.9.0"
django-background-tasks = "^1.2.5"
sysrsync = "^1.0.1"
fabric = "^2.5.0"
whitenoise = "^5.0.1"
gunicorn = "^20.0.4"
babel = "^2.8.0"
django-stubs = "^1.5.0"
tzlocal = "^2.1"
django-anymail = {extras = ["mailgun"], version = "^8.4"}

[tool.poetry.dev-dependencies]
rope = "^0.16.0"
pylint = "^2.4.4"
mypy_extensions = "^0.4.3"
mypy = "^0.770"
jupyter = "^1.0.0"
coverage = "^5.0.4"
fabric = "^2.5.0"
autopep8 = "^1.5.7"
pylint-django = "^2.0.15"
coverage-badge = "^1.0.1"
selenium = "^3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
